# cmake_generate_new_target

./: CMakeLists.txt
src/a/: CMakeLists.txt  a.cpp
src/b/: b.py
